--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body{
     font-family: "Montserrat";
 }
+
 #title{
-    background-color: #ff4c68;  
+    background-color: #ff4c68;
 }
+
 .container-fluid{
     padding: 3% 15%;
 }
@@ -12,7 +14,12 @@ button{
     font-family: 'Ubuntu', sans-serif;
 }
 
-/* brand Images */
+
+#anouncement{
+    padding: 10px 20px;
+}
+
+/* brand Images section*/
 #brand-images{
     text-align:center
 }
@@ -31,16 +38,17 @@ button{
     font-weight: bold;
     font-family: 'Ubuntu', sans-serif;
 }
-
-i:hover{
+/* Icons */
+/* i:hover{
     color: red
 }
 
 i{
     color: #ef8172;
     margin-bottom: 20px;
-}
+} */
 
+/* features */
 #features{
     padding: 5% 15%;
 }
@@ -49,53 +57,43 @@ i{
     text-align: center;
 }
 
+/* headings */
 h1{
     font-family: "Montserrat-Black";
     font-size: 3.5rem;
     line-height: 1.5;
 }
 
-/* h3{
-    font-size: 3.5rem;
-    color: white;
-    font-weight: bolder;
-    padding: 10px 0;
-} */
-
+h2{
+    padding: 10px;
+}
 
 h3{
     font-size: 1.5rem;
 }
 
-/* img{
-    width: 50%;
-} */
 p{
     color: #8f8f8f
 }
 
-#anouncement{
-    padding: 10px 20px;
-}
-
+/* testimonials */
 #testimonial-image{
     width: 10%;
     margin: 10px;
     border-radius: 100%
 }
 
-/* testimonials */
 #testimonials{
     text-align: center;
     color: white;
     background-color: #ff4c68;  
 }
+
+/* carousel */
 .carousel-item{
     padding: 5% 15%;
 }
-h2{
-    padding: 10px;
-}
+
 hr{
     border-style: dotted none none;
     width: 5%;
@@ -113,12 +111,15 @@ hr{
 	color: #FFF;
 	border-radius: 0px;
 }
+
 .jumbotron-sm { 
 	padding-top: 24px;
 	padding-bottom: 24px; }
-.jumbotron small {
+
+	.jumbotron small {
 	color: #FFF;
 }
+
 .h1 small {
 	font-size: 24px;
 }
@@ -135,4 +136,19 @@ hr{
 #social-media-link > i{
 	text-align:center;
 	size: 50px;
+}
+
+/* media */
+#media{
+	padding: 5% 15%;
+}
+
+#media-item{
+	padding: 10px;
+}
+
+#media-image-item{
+	padding: 10px;
+	width: 100px;
+	height: 100px;
 }
