--- a/style.css
+++ b/style.css
@@ -2,9 +2,36 @@ body{
     font-family: "Montserrat";
 }
 
-#title{
-    background-color: #ff4c68;
+/* alert banner */
+.alert-banner.bg-accent {
+    background-color: #49a4d5 !important;
 }
+
+.alert-banner {
+    position: relative;
+    z-index: 201;
+}
+
+.pad-vert-base {
+    padding-top: 10px !important;
+    padding-bottom: 10px !important;
+}
+
+.align-center {
+    text-align: center !important;
+}
+
+.arrow::after, .arrow-right::after {
+    content: '›';
+    pointer-events: none;
+    display: inline-block;
+    margin-left: 0.25em;
+    transition: transform 150ms cubic-bezier(0.4, 0, 0.6, 1);
+}
+
+/* #title{
+    background-color: #ff4c68;
+} */
 
 .container-fluid{
     padding: 3% 15%;
@@ -30,6 +57,10 @@ button{
     width: 80%;
 }
 /* nav bar */
+.nav-link{
+    color: black
+}
+
 .nav-item{
     padding: 0 10px;
 }
@@ -48,6 +79,11 @@ i{
     margin-bottom: 20px;
 } */
 
+/* aboutus */
+#aboutus{
+    background-color: black;
+    color: white;
+}
 /* features */
 #features{
     padding: 5% 15%;
@@ -86,7 +122,7 @@ p{
 #testimonials{
     text-align: center;
     color: white;
-    background-color: #ff4c68;  
+    background-color: black;
 }
 
 /* carousel */
@@ -97,8 +133,19 @@ p{
 hr{
     border-style: dotted none none;
     width: 5%;
-    border-width: 5px;
+    border-width: 10px;
     border-color: grey;
+}
+
+/* blink text */
+.blink_me {
+    animation: blinker 5s linear infinite;
+}
+  
+@keyframes blinker {
+    50% {
+      opacity: 0;
+    }
 }
 
 /* contact us */
@@ -107,7 +154,8 @@ hr{
 }
 
 #jumbotron-contactus {
-	background: #358CCE;
+    /* background: #358CCE; */
+    background: black;
 	color: #FFF;
 	border-radius: 0px;
 }
@@ -152,3 +200,38 @@ hr{
 	width: 100px;
 	height: 100px;
 }
+
+/*flash message*/
+/* @media (min-width: 718px)
+{
+.flash-message {
+    width: 680px;
+    padding-left: 45px;
+    padding-right: 45px;
+}
+}
+@media (min-width: 480px)
+{
+.flash-message {
+    width: 424px;
+    padding-left: 36px;
+    padding-right: 36px;
+}
+}
+@media (min-width: 374px)
+{
+.flash-message {
+    width: 324px;
+    padding-left: 39px;
+    padding-right: 39px;
+}
+}
+.flash-message {
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 276px;
+    padding-left: 42px;
+    padding-right: 42px;
+} */
