--- a/style.css
+++ b/style.css
@@ -29,10 +29,6 @@ body{
     transition: transform 150ms cubic-bezier(0.4, 0, 0.6, 1);
 }
 
-/* #title{
-    background-color: #ff4c68;
-} */
-
 .container-fluid{
     padding: 3% 15%;
 }
@@ -69,6 +65,12 @@ button{
     font-weight: bold;
     font-family: 'Ubuntu', sans-serif;
 }
+
+.navbar-toggler{
+    background: black;
+    color: white;
+}
+
 /* Icons */
 /* i:hover{
     color: red
@@ -181,11 +183,6 @@ hr{
 	padding: 10px;
 }
 
-#social-media-link > i{
-	text-align:center;
-	size: 50px;
-}
-
 /* media */
 #media{
 	padding: 5% 15%;
@@ -199,6 +196,13 @@ hr{
 	padding: 10px;
 	width: 100px;
 	height: 100px;
+}
+
+.copyright{
+    border-top: 8px #2a0400;
+    padding: 10px 0;
+    margin: 15px 0;
+    text-align: center;
 }
 
 /*flash message*/
